--- a/src/main/resources/fxml/start.fxml
+++ b/src/main/resources/fxml/start.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="hu.unideb.inf.darts.FXMLStart">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="hu.unideb.inf.darts.controller.FXMLStart">
    <children>
       <Circle layoutX="168.0" layoutY="188.0" opacity="0.3" radius="100.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
       <Circle layoutX="439.0" layoutY="188.0" opacity="0.3" radius="100.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
