--- a/src/main/resources/fxml/gameOnScene.fxml
+++ b/src/main/resources/fxml/gameOnScene.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.darts.FXMLGameOnScene">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.darts.controller.FXMLGameOnScene">
    <children>
       <Rectangle fx:id="rec1" arcHeight="5.0" arcWidth="5.0" height="123.0" layoutY="-1.0" opacity="0.2" stroke="BLACK" strokeType="INSIDE" width="300.0" />
       <Rectangle fx:id="rec2" arcHeight="5.0" arcWidth="5.0" height="123.0" layoutX="300.0" layoutY="-1.0" opacity="0.2" stroke="BLACK" strokeType="INSIDE" width="300.0" />
