--- a/src/main/resources/fxml/loginScene.fxml
+++ b/src/main/resources/fxml/loginScene.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400" prefWidth="600" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.darts.FXMLLogin">
+<AnchorPane id="AnchorPane" prefHeight="400" prefWidth="600" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.darts.controller.FXMLLogin">
     <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="38.0" layoutY="199.0" opacity="0.2" stroke="BLACK" strokeType="INSIDE" width="600.0" />
         <Button fx:id="loginButton" layoutX="164.0" layoutY="205.0" onAction="#loginAction" prefHeight="25.0" prefWidth="114.0" text="Play" />
