--- a/src/main/resources/fxml/registrationScene.fxml
+++ b/src/main/resources/fxml/registrationScene.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.darts.FXMLRegistration">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.darts.controller.FXMLRegistration">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="55.0" layoutX="1.0" layoutY="33.0" opacity="0.2" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
       <Label layoutX="165.0" layoutY="45.0" text="Registration for new users" textFill="WHITE">
