--- a/src/main/resources/fxml/resultsScene.fxml
+++ b/src/main/resources/fxml/resultsScene.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.darts.FXMLResults">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.inf.darts.controller.FXMLResults">
    <children>
       <Rectangle fx:id="rec1" arcWidth="5.0" height="66.0" layoutY="-2.0" opacity="0.3" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="301.0" />
       <Rectangle fx:id="rec2" arcWidth="5.0" height="66.0" layoutX="301.0" layoutY="-2.0" opacity="0.3" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="301.0" />
